# fin-tracker

./: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: fa23d59cc650_initial.py
src/core/: database.py  repository.py  serializer.py  uow.py
src/users/: routers.py
src/users/api/: database.py  uow.py
src/users/api/serializers/: users.py
src/users/api/v1/: users.py
src/users/repository/: users.py
